update config setting